# ColdMailGenerator

./: README.md  client.py  pyproject.toml
GenAI/ColdMailGenerator/: .env  README.md  mcp.json  server.py
